# weel-backend

./: .env.production  .gitattributes  .gitignore  BACKEND_FLOWCHART.md  Dockerfile  Makefile  manage.py  nixpacks.toml  pyproject.toml  pytest.ini  requirements.txt  schema.sql  start.sh  test_booking_notification.py
.github/workflows/: backend-ci.yml
apps/: urls.py
apps/admin_auth/: admin.py  authentication.py  models.py  permissions.py  raw_repository.py  serializers.py  urls.py  users_views.py  views.py
apps/booking/: admin.py  apps.py  filters.py  helpers.py  mixins.py  models.py  raw_calendar_service.py  raw_repository.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/bot/: handlers.py  setup.py  tests.py  urls.py  webhook.py
apps/chat/: admin.py  authentication.py  consumers.py  models.py  raw_repository.py  routing.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/norm_store/: apps.py  models.py  signals.py  sync.py
apps/normalized/: apps.py  models.py  signals.py  sync.py
apps/notification/: admin.py  apps.py  models.py  raw_repository.py  serializers.py  service.py  tasks.py  tests.py  urls.py  views.py
apps/payment/: admin.py  apps.py  choices.py  exchange_rate.py  models.py  services.py  tasks.py  tests.py
apps/shared/: date.py  (+9 more)
certificates/: AuthKey_NZ488M8YVN.p8  certificate.json
core/: asgi.py  celery.py  settings.py  settings_test_db.py  test_settings.py  unfold_settings.py  urls.py
docs/: API_APARTMENT_CREATE.md  NORM_DATASTORE.md  NORM_TABLE_ENDPOINT_MAP.md
staticfiles/: staticfiles.json
(+102 files in other folders)
